--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,19 +1,32 @@
 [buildout]
 develop = .
-parts = test test-nosecurity
-extensions = buildout.dumppickedversions
+parts = test
+extensions = mr.developer
 find-links = http://pypi.dolmen-project.org/find-links
+sources = sources
+auto-checkout = *
+always-checkout = true
+sources-dir = checkouts
+newest = false
+
+
+[sources]
+crom = git git@github.com:trollfot/crom.git
+grokker = git git@github.com:trollfot/grokker.git
+cromlech.browser = git gitosis@devel.dolmen-project.org:cromlech.browser.git branch=crom
+cromlech.i18n = git gitosis@devel.dolmen-project.org:cromlech.i18n.git branch=crom
+cromlech.security = git gitosis@devel.dolmen-project.org:cromlech.security.git branch=crom
+dolmen.template = git gitosis@devel.dolmen-project.org:dolmen.template.git branch=crom
+dolmen.viewlet = git gitosis@devel.dolmen-project.org:dolmen.viewlet.git branch=crom
+dolmen.location = git gitosis@devel.dolmen-project.org:dolmen.location.git branch=crom
+
 
 [test]
-recipe = zc.recipe.testrunner
-eggs = dolmen.menu [test]
-       dolmen.menu [security]
-defaults = ['--tests-pattern', '^tests$', '-v',
-	    '--auto-color', '--auto-progress']
+recipe = zc.recipe.egg
+eggs = pytest
+       dolmen.menu [test]
 
-
-[test-nosecurity]
-recipe = zc.recipe.testrunner
-eggs = dolmen.menu [test]
-defaults = ['--tests-pattern', '^tests_nosecurity$', '-v',
-	    '--auto-color', '--auto-progress']
+initialization =
+    import sys
+    if not sys.argv[1:]: sys.argv.append('src')
+    sys.argv.append('--doctest-modules')
